tcp_input: set ECE flag even if CWR flag is active. Submitted by Richard Scheffenegger in PR/43150.